tests/ui/lang/layout/option/invalid_repr_c.stderr
error: Failed to make repr(C) layout: field overlaps a different data type
  --> $DIR/invalid_repr_c.rs:10:10
   |
10 |     That(u64),
   |          ^^^

error: aborting due to previous error

